--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,16 @@ ul {
     text-decoration: none;
 }
 
+.logo-footer {
+    font-family: var(--font-family-logo);
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    color: var(--color-h1);
+    text-decoration: none;
+}       
+        
 .text-header {
     font-weight: 500;
     font-size: 14px;
@@ -47,6 +57,15 @@ ul {
     color: var(--color-hover-focus);
 }
 
+.text-header-gray {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    color: var(--color-text-mainn);
+}
+
 /* Page 1  */
 
 .title-h1 {
@@ -59,6 +78,7 @@ ul {
 }
 
 .title-h1-button {
+    font-family: 'Roboto', 'Open Sans', sans-serif;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
@@ -147,6 +167,7 @@ ul {
 /* Page 2 */
 
 .portfolio-btn {
+    font-family: 'Roboto', 'Open Sans', sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.62;
